fix: improve benchmark upload robustness
Enforces UTF-8 when saving uploaded benchmark content to avoid charset issues.

Uses URI-to-URL conversion for URL and Git inputs to handle encoded/edge-case URLs more reliably.

Adds an explicit null check for local uploads and throws a clear exception instead of letting a later NPE occur.

Guards error logging against null archive references to prevent logging-time NPEs.

Cleans up unused local variables and minor formatting for clarity and maintainability.